--- a/css/iparanoid.css
+++ b/css/iparanoid.css
@@ -36,6 +36,7 @@
   --footer-menu-even-background-color: #f7f7f7;
   --footer-menu-hover-background-color: #e5e5e5;
   --search-input-background-color: #f2f2f2;
+  --footer-player-bar-cur-button-color: #111111;
 
   --window-control-border-color: #dddddd;
 
