--- a/css/origin.css
+++ b/css/origin.css
@@ -36,6 +36,7 @@
   --footer-menu-even-background-color: #2d2d2d;
   --footer-menu-hover-background-color: #333333;
   --search-input-background-color: #222222;
+  --footer-player-bar-cur-button-color: #e0e0e0;
 
   --window-control-border-color: #dddddd;
 
